# hw_2

./: CMakeLists.txt
project/src/: header.h  main.c  normal_distr.c  parallel.c  sequential.c
project/tests/: test.cpp
